fixed issue with Message type where File was a string instead of an object - added File class - added support for uploaded files on the hipchat web app room view in both the razer and the knockout template. - incremented beta version library

--- a/src/HipChatWeb/Content/chat.css
+++ b/src/HipChatWeb/Content/chat.css
@@ -54,3 +54,12 @@ div.chatWindow td {
 table {
   font-size: 15px;
 }
+
+.table {
+  margin-bottom: 0;
+}
+
+.attachment {
+  padding-top: 5px;
+  font-style: italic;
+}
